Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76320

QLineEdit & TextField inputmask "X" doesn't require any input for the input to be acceptable

XMLWordPrintable

    • 95689c645fb42260d920091658b2d39c920abf00 (qt/qtbase/5.15)

      According to the documentation the input mask "X" means "Any character required" (https://doc.qt.io/qt-5/qlineedit.html#inputMask-prop). 

      Actual behavior:

      QLineEdit hasAcceptableInput / TextField acceptableInput is true even when there's no input in the QLineEdit / TextField whatsoever.

      Expected behavior:

      QLineEdit hasAcceptableInput / TextField acceptableInput remains false if no input. 

      Steps to reproduce:

      Run the attached project, leave the QLineEdit empty and hit "Check text validity".

        1. qtbug76320.zip
          2 kB
        2. qtbug76320-qml.zip
          2 kB
        3. qtbug764320_diag.diff
          3 kB
        4. qtbug764320_log.txt
          0.4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            miikapernu Miika Pernu
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes