src/quick/items/qquicktextinput.cpp
@@ -3957,7 +3957,7 @@ bool QQuickTextInputPrivate::isValidInput(QChar key, QChar mask) const
             return true;
         break;
     case 'X':
-        if (key.isPrint())
+        if (key.isPrint() && key != m_blank)
             return true;
         break;
     case 'x':
